[artf624659] Unable to update configurations for a newly created project using new archetype in framework and added environments are not visible in red theme issue fixed.

--- a/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
+++ b/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
@@ -191,8 +191,8 @@ input[type="password"] {
 
 .featureImage {
 	float: right;
-    margin: -21px 113px;
-    margin-top: -30px;
+    margin: -30px -6px -21px;
+    cursor: pointer;
 }
 
 .bubbleAll {
